test/invalid/idl/float.widl
typedef unrestricted 3.14 X;
